err.log
In file included from ./src/external.c:1:0:
./include/base.h:56:0: warning: "ERROR" redefined
 #define ERROR  1
 
In file included from c:\program files\git\mingw32\include\windows.h:46:0,
                 from ./include/base.h:18,
                 from ./src/external.c:1:
c:\program files\git\mingw32\include\wingdi.h:348:0: note: this is the location of the previous definition
 #define ERROR       0
 
In file included from ./src/external.c:1:0:
./include/base.h:189:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/external.c:1:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/external.c:1:0:
./include/base.h:190:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/external.c:1:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
In file included from ./src/external.c:2:0:
./include/external.h:26:49: error: expected declaration specifiers or '...' before '*' token
 CAPTUREANDCAST_API int StartMonitorServer(WINAPI* dc, const int clientPort, const int controlPort, const int dataPort, const int winStyleFlag, const int pageSize, stop_callback call);
                                                 ^
./src/external.c:18:49: error: expected declaration specifiers or '...' before '*' token
 CAPTUREANDCAST_API int StartMonitorServer(WINAPI* dc, const int clientPort, const int controlPort, const int dataPort, const int winStyleFlag, const int pageSize, stop_callback call)
                                                 ^
./src/external.c: In function 'ExitControl':
./src/external.c:74:2: warning: implicit declaration of function 'switch_mode' [-Wimplicit-function-declaration]
  switch_mode(0);
  ^~~~~~~~~~~
./src/external.c: In function 'SetPageAttribute':
./src/external.c:121:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [external.o] Error 1
